--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
 <div class="container-fluid">
 
 
-        <HEADER class="row" >
+        <HEADER class="row">
 
-        <div class="col-12 text-center text-white font-weight-bold"><h1>Niemenck Cédric</h1>
+        <div  class="col-12 text-center text-white font-weight-bold pt-3"><h1>Niemenck Cédric</h1>
 
-    <h2>Développeur Web / Web Mobile</h2>
+    <h2 class="pt-1">Développeur Web / Web Mobile</h2>
 
-    <p>Stage Développeur Web / web Mobile</p>
+    <p class="pt-2 pb-3">Stage Développeur Web / Web Mobile</p>
 
-    <address>48 rue de Blois, 59950 AUBY</address>
 
-    <p><a class="text-white" id="mail" href="mailto:ced-pep@hotmail.fr">ced-pep@hotmail.fr</a></p></div>
+    </div>
 
     <NAV class="navbar navbar-expand-lg navbar-light col-12 bg-info">
         <a class="navbar-brand font-weight-bold">Mon CV</a>
@@ -33,7 +32,7 @@
                     <a class="nav-link font-weight-bold" href="#experiences">Experiences<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link font-weight-bold" href="#formation">Formation<span class="sr-only"></span></a>
+                    <a class="nav-link font-weight-bold" href="#formations">Formations<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link font-weight-bold" href="#interets">Interets<span class="sr-only"></span></a>
@@ -60,8 +59,9 @@
         </ul>
     </ARTICLE>
     <ARTICLE>
-        <h3 id="formation" class="text-white mt-2">Formation</h3>
+        <h3 id="formations" class="text-white mt-2">Formations</h3>
         <ul class="list-group list-group-flush">
+            <li class="list-group-item"><span class="font-weight-bold">11/2019 - En cours : </span>T.P, Developpeur Web / Web Mobile, Greta Grand Hainaut - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2016 - 01/2018 : </span>D.A.E.U, Faculté de Droit Alexis De Toqueville - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2006 - 06/2007 : </span>B.E.P  M.S.M.A, LP Edmond Labbé - Douai </li>
             <li class="list-group-item"><span class="font-weight-bold">09/2004 - 06/2005 : </span>B.E.P.C, Collége A.France - Sin-Le-Noble</li>
@@ -78,8 +78,15 @@
     </div>
 
     <ASIDE class="col-md-4 ml-3 text-left">
-        <h3 class="text-white mt-5">Profil</h3>
-        <ul class="list-group list-group-flush"></ul>
+        <h3 class="text-white mt-5">Contacts</h3>
+        <ul class="list-group list-group-flush">
+        <li class="list-group-item"><img src="images/phone.png" width="30" height="30"/> 06.26.04.68.67</li>
+            <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:ced-pep@hotmail.fr">ced-pep@hotmail.fr</a></li>
+            <li class="list-group-item"><img src="images/maison.png" width="30" height="30" class="mr-2"/> 48 rue de Blois, 59950 AUBY</li>
+        </ul>
+
+        <h3 class="text-white mt-3">Profil</h3>
+        <ul class="list-group list-group-flush">
         <li class="list-group-item">Actuellement en Titre Professionnel de Développeur Web / Web Mobile, je cherche activement un stage dans
             le domaine du Développement Web d'une durée de 3 mois,
             afin d'acquérir de plus amples compétences qui me permettront d'atteindre mes objectifs professionnels.</li>
