Modification du profil ainsi que des compétences.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h2 class="pt-1">Développeur Web / Web Mobile</h2>
 
-    <p class="pt-2 pb-3">Stage Développeur Web / Web Mobile</p>
+    <p class="pt-2 pb-3">Développeur Web / Web Mobile</p>
 
 
     </div>
@@ -87,9 +87,9 @@
 
         <h3 class="text-white mt-3">Profil</h3>
         <ul class="list-group list-group-flush">
-        <li class="list-group-item">Actuellement en Titre Professionnel de Développeur Web / Web Mobile, je cherche activement un stage dans
-            le domaine du Développement Web d'une durée de 3 mois,
-            afin d'acquérir de plus amples compétences qui me permettront d'atteindre mes objectifs professionnels.</li>
+        <li class="list-group-item">Actuellement en Titre Professionnel de Développeur Web/Web Mobile au sein du Greta Grand-Hainaut de Douai.
+        Je cherche activement à acquérir de nouvelles compétences à travers un projet de création de site web/web mobile qui m'apportera de
+        plus amples qualités professionnelles afin de valider mon Titre Professionnel.</li>
        </ul>
 
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
@@ -103,6 +103,9 @@
             <li class="text-white mt-2">JAVASCRIPT</li>
             <li class="progress">
                 <span class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</span></li>
+            <li class="text-white mt-2">Maquettage</li>
+            <li class="progress">
+                <span class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</span></li>
 
         </ol>
     </ASIDE>
