--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TD01-Exo02</title>
+    <title>CV Cédric NIEMENCK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/CV_bootstrap.css">
@@ -15,11 +15,10 @@
 
         <HEADER class="row">
 
-        <div  class="col-12 text-center text-white font-weight-bold pt-3"><h1>Niemenck Cédric</h1>
+        <div  class="col-12 text-center text-white font-weight-bold pt-3"><h1>Cédric NIEMENCK</h1>
 
-    <h2 class="pt-1">Développeur Web / Web Mobile</h2>
+    <h2 class="pt-1 pb-4">Développeur Web / Web Mobile</h2>
 
-    <p class="pt-2 pb-3">Développeur Web / Web Mobile</p>
 
 
     </div>
@@ -70,7 +69,7 @@
     <ARTICLE>
         <h3 id="interets" class="text-white mt-2">Intérêts</h3>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Musiques, deejaying</li>
+            <li class="list-group-item">Musiques, deejaying (grande passion pour l'univers du vinyl!)</li>
             <li class="list-group-item">Cinéma</li>
 
         </ul>
@@ -81,16 +80,10 @@
         <h3 class="text-white mt-5">Contacts</h3>
         <ul class="list-group list-group-flush">
         <li class="list-group-item"><img src="images/phone.png" width="30" height="30"/> 06.26.04.68.67</li>
-            <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:ced-pep@hotmail.fr">ced-pep@hotmail.fr</a></li>
+            <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:cedric.niemenck@gmail.com">cedric.niemenck@gmail.com</a></li>
             <li class="list-group-item"><img src="images/maison.png" width="30" height="30" class="mr-2"/> 48 rue de Blois, 59950 AUBY</li>
         </ul>
 
-        <h3 class="text-white mt-3">Profil</h3>
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Actuellement en Titre Professionnel de Développeur Web/Web Mobile au sein du Greta Grand-Hainaut de Douai.
-        Je cherche activement à acquérir de nouvelles compétences à travers un projet de création de site web/web mobile qui m'apportera de
-        plus amples qualités professionnelles afin de valider mon Titre Professionnel.</li>
-       </ul>
 
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
         <ol>
@@ -112,7 +105,7 @@
 </SECTION>
     <FOOTER class="row mt-5">
             <div class="col-12 text-center text-white">
-    <a href="" target="blank" title="Lnk">
+    <a href="https://www.linkedin.com/in/c%C3%A9dric-niemenck-9a05661a0/" target="blank" title="Lnk">
         <img src="images/LI-In-Bug.png" height="27" width="32" alt="Lnk" title="Mon profil"/>
     </a>
     <p>Created by Cedric NIEMENCK</p></div>
