--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
         <ol>
             <li class="text-white">HTML5</li>
             <li class="progress">
-                <span class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
+                <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
             <li class="text-white mt-2">CSS3</li>
             <li class="progress">
-                <span class="progress-bar bg-success" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</span></li>
+                <span class="progress-bar bg-info" role="progressbar" style="width: 35%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</span></li>
             <li class="text-white mt-2">JAVASCRIPT</li>
             <li class="progress">
-                <span class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</span></li>
+                <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
             <li class="text-white mt-2">Maquettage</li>
             <li class="progress">
-                <span class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</span></li>
+                <span class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
+            <li class="text-white mt-2">PHP</li>
+            <li class="progress">
+                <span class="progress-bar bg-info" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>
 
         </ol>
     </ASIDE>
