Ajout de contenu, experience professionnelle

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <h2 class="text-white">Mon parcours</h2>
         <h3 id="experiences" class="text-white">Expériences Professionnelles</h3>
         <ul class="list-group list-group-flush">
+            <li  class="list-group-item"><span class="font-weight-bold">11/2020 - 12/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (CDD) - Douai</li>
+            <li  class="list-group-item"><span class="font-weight-bold">06/2020 - 10/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (stage) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">04/2016 - 05/2016 : </span>Agent Administratif, Collége A.Streinger (stage) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">04/2016 - 04/2016 : </span>Infographiste, Mairie (stage) - Auby</li>
             <li  class="list-group-item"><span class="font-weight-bold">06/2015 - 09/2015 : </span>Agent d'entretien, OptimHome Services 59 (CDD) - Roubaix</li>
@@ -60,7 +62,7 @@
     <ARTICLE>
         <h3 id="formations" class="text-white mt-2">Formations</h3>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><span class="font-weight-bold">11/2019 - En cours : </span>T.P, Developpeur Web / Web Mobile, Greta Grand Hainaut - Douai</li>
+            <li class="list-group-item"><span class="font-weight-bold">11/2019 - 10/2020 : </span>T.P, Developpeur Web / Web Mobile, Greta Grand Hainaut - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2016 - 01/2018 : </span>D.A.E.U, Faculté de Droit Alexis De Toqueville - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2006 - 06/2007 : </span>B.E.P  M.S.M.A, LP Edmond Labbé - Douai </li>
             <li class="list-group-item"><span class="font-weight-bold">09/2004 - 06/2005 : </span>B.E.P.C, Collége A.France - Sin-Le-Noble</li>
@@ -88,29 +90,29 @@
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
         <ol>
             <li class="text-white">HTML5</li>
-            <li class="progress">
-                <span class="progress-bar bg-success" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</span></li>
-            <li class="text-white mt-2">CSS3</li>
-            <li class="progress">
+            <!--<li class="progress">
+                <span class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</span></li>
+            --><li class="text-white mt-2">CSS3</li>
+            <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
-            <li class="text-white mt-2">JAVASCRIPT</li>
-            <li class="progress">
-                <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">Maquettage</li>
-            <li class="progress">
+            --><li class="text-white mt-2">JAVASCRIPT</li>
+            <!--<li class="progress">
+              <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
+           --><li class="text-white mt-2">Maquettage</li>
+            <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
-            <li class="text-white mt-2">PHP</li>
-            <li class="progress">
+            --><li class="text-white mt-2">PHP</li>
+            <!--<li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">BDD</li>
-            <li class="progress">
+            --><li class="text-white mt-2">BDD</li>
+            <!--<li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">CMS / WORDPRESS</li>
-            <li class="progress">
+            --><li class="text-white mt-2">CMS / WORDPRESS</li>
+            <!--<li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">TYPESCRIPT</li>
-            <li class="progress">
-                <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>
+            --><li class="text-white mt-2">TYPESCRIPT</li>
+            <!--<li class="progress">
+                <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>-->
         </ol>
     </ASIDE>
 </SECTION>
