Ajout de lien cliquable pdf sur mon cv

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <NAV class="navbar navbar-expand-lg navbar-light col-12 bg-info">
-        <a class="navbar-brand font-weight-bold">Mon CV</a>
+        <a class="navbar-brand font-weight-bold" href="cv_niemenck_cedric.pdf" download="cv Niemenck Cedric">Mon CV</a>
 
         <ul class="navbar-nav mr-auto collapse navbar-collapse d-flex justify-content-around">
                 <li class="nav-item active">
