--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <div class="container-fluid">
 
 
-        <HEADER class="row">
+        <header class="row">
 
-        <div  class="col-12 text-center text-white font-weight-bold pt-3"><h1>Cédric NIEMENCK</h1>
+        <div  class="col-12 text-center text-white font-weight-bold pt-3">
 
-    <h2 class="pt-1 pb-4">Développeur Web / Web Mobile</h2>
+            <h1>Cédric NIEMENCK</h1>
+
+        <h2 class="pt-1 pb-4">Développeur Web / Web Mobile</h2>
 
 
 
-    </div>
+        </div>
 
     <NAV class="navbar navbar-expand-lg navbar-light col-12 bg-info">
-        <a class="navbar-brand font-weight-bold" href="cv_niemenck_cedric.pdf" download="cv Niemenck Cedric">Mon CV</a>
+        <a class="navbar-brand font-weight-bold" href="cv_niemenck_cedric.pdf" download="CV Niemenck Cédric">Mon CV</a>
 
         <ul class="navbar-nav mr-auto collapse navbar-collapse d-flex justify-content-around">
                 <li class="nav-item active">
@@ -40,13 +42,15 @@
         </ul>
 
     </NAV>
-</HEADER>
+</header>
 
-<SECTION class="row mt-3">
+<section class="row mt-3">
     <div class="col-md-7">
 
         <article>
-        <h2 class="text-white">Mon parcours</h2>
+        <div id="parcours">
+            <h2 class="text-white">Mon parcours</h2>
+        </div>
         <h3 id="experiences" class="text-white">Expériences Professionnelles</h3>
         <ul class="list-group list-group-flush">
             <li  class="list-group-item"><span class="font-weight-bold">11/2020 - 12/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (CDD) - Douai</li>
@@ -81,9 +85,9 @@
     <ASIDE class="col-md-4 ml-3 text-left">
         <h3 class="text-white mt-5">Contacts</h3>
         <ul class="list-group list-group-flush">
-        <li class="list-group-item"><img src="images/phone.png" width="30" height="30"/> 06.26.04.68.67</li>
-            <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:cedric.niemenck@gmail.com">cedric.niemenck@gmail.com</a></li>
-            <li class="list-group-item"><img src="images/maison.png" width="30" height="30" class="mr-2"/> 48 rue de Blois, 59950 AUBY</li>
+        <li class="list-group-item"><img src="images/phone.png" width="30" height="30"/><a href="tel: 0626046867"> 06.26.04.68.67</a></li>
+            <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:cedric.niemenck@gmail.com"> cedric.niemenck@gmail.com</a></li>
+            <li class="list-group-item"><img src="images/maison.png" width="30" height="30" class="mr-2"/> 59950 AUBY</li>
         </ul>
 
 
@@ -115,7 +119,7 @@
                 <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>-->
         </ol>
     </ASIDE>
-</SECTION>
+</section>
     <FOOTER class="row mt-5">
             <div class="col-12 text-center text-white">
     <a href="https://www.linkedin.com/in/c%C3%A9dric-niemenck-9a05661a0/" target="blank" title="Lnk">
