Changement du titre de cv et ajout le la formation CDA en cours

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h1>Cédric NIEMENCK</h1>
 
-        <h2 class="pt-1 pb-4">Développeur Web / Web Mobile</h2>
+        <h2 class="pt-1 pb-4">Concepteur Développeur d'Applications</h2>
 
 
 
@@ -66,6 +66,7 @@
     <ARTICLE>
         <h3 id="formations" class="text-white mt-2">Formations</h3>
         <ul class="list-group list-group-flush">
+            <li class="list-group-item"><span class="font-weight-bold">01/2021 - 12/2021 : </span>T.P, Concepteur Développeur d'Applications, Greta Grand Hainaut - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">11/2019 - 10/2020 : </span>T.P, Developpeur Web / Web Mobile, Greta Grand Hainaut - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2016 - 01/2018 : </span>D.A.E.U, Faculté de Droit Alexis De Toqueville - Douai</li>
             <li class="list-group-item"><span class="font-weight-bold">09/2006 - 06/2007 : </span>B.E.P  M.S.M.A, LP Edmond Labbé - Douai </li>
