--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <ARTICLE>
         <h3 id="interets" class="text-white mt-2">Intérêts</h3>
         <ul class="list-group list-group-flush">
+            <li class="list-group-item">Monde du Numérique</li>
             <li class="list-group-item">Musiques, deejaying (grande passion pour l'univers du vinyl!)</li>
             <li class="list-group-item">Cinéma</li>
 
@@ -94,29 +95,49 @@
 
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
         <ol>
-            <li class="text-white">HTML5</li>
+            <li class="text-white">
+                <img src="images/html_js_css.png" height="80" width="200">
+                <img src="images/balsamiq.png" height="80" width="80">
+            </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</span></li>
-            --><li class="text-white mt-2">CSS3</li>
+            --><li class="text-white mt-2">
+                <img src="images/bootstrap.png" height="80" width="80">
+                <img src="images/flexbox.png" height="60" width="70">
+                <img src="images/wordpress.png" height="60" width="120">
+            </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
-            --><li class="text-white mt-2">JAVASCRIPT</li>
+            --><li class="text-white mt-2">
+                <img src="images/wampserver.png" height="60" width="60">
+                <img src="images/php.png" height="60" width="80">
+                <img src="images/mysql.png" height="70" width="80">
+                <img src="images/phpmyadmin.JPG" height="50" width="80">
+        </li>
             <!--<li class="progress">
               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-           --><li class="text-white mt-2">Maquettage</li>
+           --><li class="text-white mt-2">
+                <img src="images/Laravel-logo.jpg" height="50" width="50">
+                <img src="images/c%23_logo.png" height="50" width="50">
+                <img src="images/java.png" height="70" width="70">
+                <img src="images/logo-ionic.png" height="70" width="70">
+        </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
-            --><li class="text-white mt-2">PHP</li>
+            --><li class="text-white mt-2">
+                <img src="images/Phpstorm.png" height="60" width="60">
+                <img src="images/vs.png" height="60" width="60">
+        </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            --><li class="text-white mt-2">BDD</li>
-            <!--<li class="progress">
+            <li class="text-white mt-2">BDD</li>
+            <li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            --><li class="text-white mt-2">CMS / WORDPRESS</li>
-            <!--<li class="progress">
+            <li class="text-white mt-2">CMS / WORDPRESS</li>
+            <li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            --><li class="text-white mt-2">TYPESCRIPT</li>
-            <!--<li class="progress">
+            <li class="text-white mt-2">TYPESCRIPT</li>
+            <li class="progress">
                 <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>-->
         </ol>
     </ASIDE>
