--- a/index.html
+++ b/index.html
@@ -96,31 +96,31 @@
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
         <ol>
             <li class="text-white">
-                <img src="images/html_js_css.png" height="80" width="200">
-                <img src="images/balsamiq.png" height="80" width="80">
+                <img src="images/html_js_css.png" height="80" width="200" alt="html_js_css">
+                <img src="images/balsamiq.png" height="80" width="80" alt="balsamiq">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</span></li>
             --><li class="text-white mt-2">
-                <img src="images/bootstrap.png" height="80" width="80">
-                <img src="images/flexbox.png" height="60" width="70">
-                <img src="images/wordpress.png" height="60" width="120">
+                <img src="images/bootstrap.png" height="80" width="80" alt="bootstrap">
+                <img src="images/flexbox.png" height="60" width="70" alt="flexbox">
+                <img src="images/wordpress.png" height="60" width="120" alt="wordpress">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
             --><li class="text-white mt-2">
-                <img src="images/wampserver.png" height="60" width="60">
-                <img src="images/php.png" height="60" width="80">
-                <img src="images/mysql.png" height="70" width="80">
-                <img src="images/phpmyadmin.JPG" height="50" width="80">
+                <img src="images/wampserver.png" height="60" width="60" alt="wamp">
+                <img src="images/php.png" height="60" width="80" alt="php">
+                <img src="images/mysql.png" height="70" width="80" alt="mysql">
+                <img src="images/phpmyadmin.JPG" height="50" width="80" alt="phpmyadmin">
         </li>
             <!--<li class="progress">
               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
            --><li class="text-white mt-2">
-                <img src="images/Laravel-logo.jpg" height="50" width="50">
-                <img src="images/c%23_logo.png" height="50" width="50">
-                <img src="images/java.png" height="70" width="70">
-                <img src="images/logo-ionic.png" height="70" width="70">
+                <img src="images/Laravel-logo.jpg" height="50" width="50" alt="laravel">
+                <img src="images/c%23_logo.png" height="50" width="50" alt="csharp">
+                <img src="images/java.png" height="70" width="70" alt="java">
+                <img src="images/logo-ionic.png" height="70" width="70" alt="ionic">
         </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
@@ -147,7 +147,7 @@
     <a href="https://www.linkedin.com/in/c%C3%A9dric-niemenck-9a05661a0/" target="blank" title="Lnk">
         <img src="images/LI-In-Bug.png" height="27" width="32" alt="Lnk" title="Mon profil"/>
     </a>
-    <p>Created by Cedric NIEMENCK</p></div>
+    <p>Created by Cédric NIEMENCK</p></div>
         </FOOTER>
 </div>
 
