Ajout de nouvelles compétences Ajout rubrique intérets et langues Ajout de lien barre de nav (comlpetences et contact) Ajout d'icone de télechargement cv

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
 
     <NAV class="navbar navbar-expand-lg navbar-light col-12 bg-info">
-        <a class="navbar-brand font-weight-bold" href="cv_niemenck_cedric.pdf" download="CV Niemenck Cédric">Mon CV</a>
+        <a class="navbar-brand font-weight-bold" href="CV_Cédric_NIEMENCK.pdf" download="CV Cédric NIEMENCK">
+            <img src="images/download.png" height="30" width="30"> Mon CV</a>
 
         <ul class="navbar-nav mr-auto collapse navbar-collapse d-flex justify-content-around">
                 <li class="nav-item active">
@@ -35,9 +36,15 @@
                 <li class="nav-item active">
                     <a class="nav-link font-weight-bold" href="#formations">Formations<span class="sr-only"></span></a>
                 </li>
+            <li class="nav-item active">
+                <a class="nav-link font-weight-bold" href="#competences">Competences<span class="sr-only"></span></a>
+            </li>
                 <li class="nav-item active">
                     <a class="nav-link font-weight-bold" href="#interets">Interets<span class="sr-only"></span></a>
                 </li>
+            <li class="nav-item active">
+                <a class="nav-link font-weight-bold" href="#contact">Contact<span class="sr-only"></span></a>
+            </li>
 
         </ul>
 
@@ -76,16 +83,16 @@
     <ARTICLE>
         <h3 id="interets" class="text-white mt-2">Intérêts</h3>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Monde du Numérique</li>
-            <li class="list-group-item">Musiques, deejaying (grande passion pour l'univers du vinyl!)</li>
-            <li class="list-group-item">Cinéma</li>
+            <li class="list-group-item"><img src="images/numerique.png" width="30" height="30"/> Monde du Numérique</li>
+            <li class="list-group-item"><img src="images/dj.png" width="30" height="30"/> Musiques, deejaying (grande passion pour l'univers du vinyl!)</li>
+
 
         </ul>
     </ARTICLE>
     </div>
 
     <ASIDE class="col-md-4 ml-3 text-left">
-        <h3 class="text-white mt-5">Contacts</h3>
+        <h3  id="contact" class="text-white mt-5">Contact</h3>
         <ul class="list-group list-group-flush">
         <li class="list-group-item"><img src="images/phone.png" width="30" height="30"/><a href="tel: 0626046867"> 06.26.04.68.67</a></li>
             <li class="list-group-item"><img src="images/mail.png" width="30" height="30" /><a class="ml-2" id="mail" href="mailto:cedric.niemenck@gmail.com"> cedric.niemenck@gmail.com</a></li>
@@ -97,7 +104,8 @@
         <ol>
             <li class="text-white">
                 <img src="images/html_js_css.png" height="80" width="200" alt="html_js_css">
-                <img src="images/balsamiq.png" height="80" width="80" alt="balsamiq">
+                <img src="images/ajax.png" height="80" width="80" alt="ajax">
+                <img src="images/nodejs.png" height="50" width="120" alt="nodejs">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</span></li>
@@ -105,14 +113,15 @@
                 <img src="images/bootstrap.png" height="80" width="80" alt="bootstrap">
                 <img src="images/flexbox.png" height="60" width="70" alt="flexbox">
                 <img src="images/wordpress.png" height="60" width="120" alt="wordpress">
+                <img src="images/prestashop-logo.png" height="60" width="120" alt="prestashop">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
             --><li class="text-white mt-2">
-                <img src="images/wampserver.png" height="60" width="60" alt="wamp">
-                <img src="images/php.png" height="60" width="80" alt="php">
-                <img src="images/mysql.png" height="70" width="80" alt="mysql">
-                <img src="images/phpmyadmin.JPG" height="50" width="80" alt="phpmyadmin">
+                <img src="images/github.png" height="60" width="100" alt="Git">
+                <img src="images/balsamiq.png" height="70" width="70" alt="balsamiq">
+                <img src="images/trello.png" height="60" width="100" alt="trello">
+                <img src="images/Visual_paradigm_logo.png" height="60" width="60" alt="VisualParadigm">
         </li>
             <!--<li class="progress">
               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
@@ -121,25 +130,41 @@
                 <img src="images/c%23_logo.png" height="50" width="50" alt="csharp">
                 <img src="images/java.png" height="70" width="70" alt="java">
                 <img src="images/logo-ionic.png" height="70" width="70" alt="ionic">
+                <img src="images/XamarinLogo.png" height="70" width="120" alt="xamarin">
         </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
             --><li class="text-white mt-2">
-                <img src="images/Phpstorm.png" height="60" width="60">
-                <img src="images/vs.png" height="60" width="60">
+                <img src="images/wampserver.png" height="60" width="60" alt="wamp">
+                <img src="images/php.png" height="60" width="60" alt="php">
+                <img src="images/MySQLWorkbench.png" height="60" width="60" alt="workbench">
+                <img src="images/Apache_Cordova_Logo.png" height="60" width="150" alt="apacheCordova">
         </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">BDD</li>
-            <li class="progress">
-                <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">CMS / WORDPRESS</li>
-            <li class="progress">
-                <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
-            <li class="text-white mt-2">TYPESCRIPT</li>
-            <li class="progress">
-                <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>-->
+            --><li class="text-white mt-2">
+                <img src="images/typescript.png" height="60" width="120" alt="typescript">
+                <img src="images/Phpstorm.png" height="60" width="60" alt="phpStorm">
+                <img src="images/1200px-Visual_Studio_Code_1.35_icon.svg.png" height="60" width="60" alt="VSC1">
+                <img src="images/vs.png" height="60" width="60" alt="vs2">
+
+        </li>
+            <!--<li class="progress">
+               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
+           <li class="text-white mt-2">CMS / WORDPRESS</li>
+           <li class="progress">
+               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
+           <li class="text-white mt-2">TYPESCRIPT</li>
+           <li class="progress">
+               <span class="progress-bar bg-warning" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</span></li>-->
         </ol>
+
+        <h3  id="langue" class="text-white mt-5">Langues</h3>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"> Anglais - Notions</li>
+
+        </ul>
+
     </ASIDE>
 </section>
     <FOOTER class="row mt-5">
