Ajout de nouvelles compétences Ajout rubrique intérets et langues Ajout de lien barre de nav (comlpetences et contact) Ajout d'icone de télechargement cv Ajout icone onglet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CV Cédric NIEMENCK</title>
+    <title> | Cédric NIEMENCK</title>
+    <link rel="icon" href="images/cv2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/CV_bootstrap.css">
