--- a/index.html
+++ b/index.html
@@ -106,29 +106,34 @@
             <li class="text-white">
                 <img src="images/html_js_css.png" height="80" width="200" alt="html_js_css">
                 <img src="images/ajax.png" height="80" width="80" alt="ajax">
-                <img src="images/nodejs.png" height="50" width="120" alt="nodejs">
+
+            </li>
+
+            <li class="text-white">
+                <img src="images/nodejs.png" height="30" width="110" alt="nodejs">
+                <img src="images/vuejs.png" height="50" width="120" alt="vuejs">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</span></li>
             --><li class="text-white mt-2">
                 <img src="images/bootstrap.png" height="80" width="80" alt="bootstrap">
                 <img src="images/flexbox.png" height="60" width="70" alt="flexbox">
-                <img src="images/wordpress.png" height="60" width="120" alt="wordpress">
-                <img src="images/prestashop-logo.png" height="60" width="120" alt="prestashop">
+                <img src="images/wordpress.png" height="60" width="120" alt="wordpress" class="ml-2">
+                <img src="images/prestashop-logo.png" height="60" width="120" alt="prestashop" class="ml-2">
             </li>
             <!--<li class="progress">
                 <span class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</span></li>
             --><li class="text-white mt-2">
                 <img src="images/github.png" height="60" width="100" alt="Git">
-                <img src="images/balsamiq.png" height="70" width="70" alt="balsamiq">
-                <img src="images/trello.png" height="60" width="100" alt="trello">
-                <img src="images/Visual_paradigm_logo.png" height="60" width="60" alt="VisualParadigm">
+                <img src="images/balsamiq.png" height="70" width="70" alt="balsamiq" class="ml-2">
+                <img src="images/trello.png" height="60" width="100" alt="trello" class="ml-2">
+                <img src="images/Visual_paradigm_logo.png" height="60" width="60" alt="VisualParadigm" class="ml-2">
         </li>
             <!--<li class="progress">
               <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
            --><li class="text-white mt-2">
                 <img src="images/Laravel-logo.jpg" height="50" width="50" alt="laravel">
-                <img src="images/c%23_logo.png" height="50" width="50" alt="csharp">
+                <img src="images/codeigniter.png" height="60" width="60" alt="ci" class="ml-2">
                 <img src="images/java.png" height="70" width="70" alt="java">
                 <img src="images/logo-ionic.png" height="70" width="70" alt="ionic">
                 <img src="images/XamarinLogo.png" height="70" width="120" alt="xamarin">
@@ -138,6 +143,7 @@
             --><li class="text-white mt-2">
                 <img src="images/wampserver.png" height="60" width="60" alt="wamp">
                 <img src="images/php.png" height="60" width="60" alt="php">
+                <img src="images/c%23_logo.png" height="50" width="50" alt="csharp">
                 <img src="images/MySQLWorkbench.png" height="60" width="60" alt="workbench">
                 <img src="images/Apache_Cordova_Logo.png" height="60" width="150" alt="apacheCordova">
         </li>
@@ -145,9 +151,9 @@
                 <span class="progress-bar bg-info" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</span></li>
             --><li class="text-white mt-2">
                 <img src="images/typescript.png" height="60" width="120" alt="typescript">
-                <img src="images/Phpstorm.png" height="60" width="60" alt="phpStorm">
-                <img src="images/1200px-Visual_Studio_Code_1.35_icon.svg.png" height="60" width="60" alt="VSC1">
-                <img src="images/vs.png" height="60" width="60" alt="vs2">
+                <img src="images/Phpstorm.png" height="60" width="60" alt="phpStorm" class="ml-2">
+                <img src="images/1200px-Visual_Studio_Code_1.35_icon.svg.png" height="60" width="60" alt="VSC1" class="ml-2">
+                <img src="images/vs.png" height="60" width="60" alt="vs2" class="ml-2">
 
         </li>
             <!--<li class="progress">
