--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
         <h3 id="experiences" class="text-white">Expériences Professionnelles</h3>
         <ul class="list-group list-group-flush">
+            <li  class="list-group-item"><span class="font-weight-bold">07/2021 - 10/2021 : </span>Concepteur d'Application, Association des Centres Sociaux de Douai (stage) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">11/2020 - 12/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (CDD) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">06/2020 - 10/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (stage) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">04/2016 - 05/2016 : </span>Agent Administratif, Collége A.Streinger (stage) - Douai</li>
