--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <h1>Cédric NIEMENCK</h1>
 
-        <h2 class="pt-1 pb-4"></h2>
+        <h2 class="pt-1 pb-4"></h2><!--Titre-->
 
 
 
