orthographe entités barre de nav

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
         <ul class="navbar-nav mr-auto collapse navbar-collapse d-flex justify-content-around">
                 <li class="nav-item active">
-                    <a class="nav-link font-weight-bold" href="#experiences">Experiences<span class="sr-only"></span></a>
+                    <a class="nav-link font-weight-bold" href="#experiences">Expériences<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link font-weight-bold" href="#formations">Formations<span class="sr-only"></span></a>
                 </li>
             <li class="nav-item active">
-                <a class="nav-link font-weight-bold" href="#competences">Competences<span class="sr-only"></span></a>
+                <a class="nav-link font-weight-bold" href="#competences">Compétences<span class="sr-only"></span></a>
             </li>
                 <li class="nav-item active">
-                    <a class="nav-link font-weight-bold" href="#interets">Interets<span class="sr-only"></span></a>
+                    <a class="nav-link font-weight-bold" href="#interets">Intérêts<span class="sr-only"></span></a>
                 </li>
             <li class="nav-item active">
                 <a class="nav-link font-weight-bold" href="#contact">Contact<span class="sr-only"></span></a>
