changement rubrique interets passion vinyl

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h3 id="interets" class="text-white mt-2">Intérêts</h3>
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><img src="images/numerique.png" width="30" height="30"/> Monde du Numérique</li>
-            <li class="list-group-item"><img src="images/dj.png" width="30" height="30"/> Musiques, deejaying, vinyls</li>
+            <li class="list-group-item"><img src="images/dj.png" width="30" height="30"/> Musiques, deejaying, collection vinyls</li>
 
 
         </ul>
