--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <h3 id="experiences" class="text-white">Expériences Professionnelles</h3>
         <ul class="list-group list-group-flush">
-            <li  class="list-group-item"><span class="font-weight-bold">12/2021 - En cours : </span>Chargé de Transition Numérique, Association des Centres Sociaux de Douai (CDD) - Douai</li>
+            <li  class="list-group-item"><span class="font-weight-bold">12/2021 - 12/2022 : </span>Chargé de Transition Numérique, Association des Centres Sociaux de Douai (CDD) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">07/2021 - 10/2021 : </span>Concepteur d'Application, Association des Centres Sociaux de Douai (stage) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">11/2020 - 12/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (CDD) - Douai</li>
             <li  class="list-group-item"><span class="font-weight-bold">06/2020 - 10/2020 : </span>Développeur Web / Web Mobile, Association des Centres Sociaux de Douai (stage) - Douai</li>
