Ajout de compétences suite adobe

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
         <h3 id="competences" class="text-white mt-3">Compétences</h3>
         <ol>
             <li class="text-white">
+                <img src="images/illustrator.png" height="60" width="60" alt="illustrator">
+                <img src="images/photoshop.png" height="73" width="73" alt="photoshop">
+                <img src="images/indesign.png" height="60" width="60" alt="indesign">
+
+            </li>
+
+            <li class="text-white">
                 <img src="images/html_js_css.png" height="80" width="200" alt="html_js_css">
                 <img src="images/ajax.png" height="80" width="80" alt="ajax">
 
